# EconomicMonitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy.yml
assets/: index-CCROk_nW.css  index-CD4NrkdK.css  index-C_anI8JI.css  index-CqfVbxq6.css  index-DJtkDTI5.css  index-DxCefEOD.css  index-ezwXSuSo.css
data/: economic-data.json
ml/: README.md  pyproject.toml  requirements.txt
ml/calibrate/: __init__.py  isotonic.py
ml/data/: __init__.py  constants.py  prepare_panel.py
ml/eval/: forward_outlook.py  loro_cv.py  metrics.py  run_forward_eval.py
ml/export/: __init__.py  to_onnx.py
ml/models/: hazard_head.py  recession_model.py  temporal_vae.py
ml/train/: baseline_survival.py  dataset.py  train_all.py
public/models/: recession_v1.onnx  recession_v1.onnx.data  recession_v1_meta.json
scripts/: fetch-economic-data.mjs  sp500-merge.mjs
src/: main.ts  styles.css  vite-env.d.ts
src/analysis/: cosineFit.ts  featureBuilder.ts  forwardOutlook.ts  predictionCache.ts  recessionForecast.ts  recessionModel.ts  recessionSignals.ts  recessionTypes.ts
src/api/: clevelandFed.ts  fred.ts
src/backtest/: chartBacktestController.ts  chartBacktestHover.ts  seriesSplit.ts
src/charts/: chart1_gdp_sp500.ts  chart2_gdp_jobs.ts  chart3_fedfunds_jobs.ts  chart4_yield_gdp.ts  chart5_yield_claims.ts  chart6_corporate_profits.ts  chart7_cpi_surprise_sp500.ts  chartExpand.ts  chartRegister.ts  chartRegistry.ts  chartReset.ts  common.ts  correlationForecastPanel.ts  dualPanelChart.ts  hoverShapes.ts  syncedHover.ts  (+2 more)
(+10 files in other folders)
